<resources>
    <string name="app_name">Хочу помочь</string>
    <string name="birthday_label">Дата рождения</string>
    <string name="sphere_label">Сфера деятельности</string>
    <string name="get_push_nots">Получать push-уведомления</string>
    <string name="your_friends">Ваши друзья</string>
    <string name="exit_string">Выйти из аккаунта</string>
    <string name="profile">Профиль</string>
    <string name="edit_profile">Edit profile</string>
    <string name="news">Новости</string>
    <string name="search">Поиск</string>
    <string name="history">История</string>
    <string name="help">Помочь</string>
    <string name="choose_photo">Выбрать фото</string>
    <string name="take_photo">Сделать снимок</string>
    <string name="delete_photo">Удалить</string>
    <string name="explaining_message">Explaining message</string>
    <string name="no_camera">No camera on the device</string>
    <string name="choose_help_category">Выберите категорию помощи</string>
    <string name="adult">Взрослые</string>
    <string name="kids">Дети</string>
    <string name="olds">Пожилые</string>
    <string name="animals">Животные</string>
    <string name="events">Мероприятия</string>
    <string name="by_organizations">По НКО</string>
    <string name="by_events">По мероприятиям</string>
    <string name="enter_organization_name">Введите название организации</string>
    <string name="enter_event_name">Введите название мероприятия</string>
    <string name="key_words">Ключевые слова: %s</string>
    <string name="search_results">Результаты поиска: %d %s</string>
    <plurals name="events">
        <item quantity="one">мероприятие</item>
        <item quantity="few">мероприятия</item>
        <item quantity="zero">мероприятий</item>
        <item quantity="other">мероприятий</item>
    </plurals>
    <plurals name="organizations">
        <item quantity="zero">организаций</item>
        <item quantity="one">организация</item>
        <item quantity="other">организаций</item>
    </plurals>
    <string name="offer_organizations_input">Напишите в строке поиска название организации или ключевые слова.</string>
    <string name="example">Например,</string>
    <string name="voice_search">Голосовой поиск</string>
</resources>