<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/news"
        android:title="@string/news"
        android:icon="@drawable/ic_news"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/placeholder"
        app:showAsAction="ifRoom"
        android:title="@string/help"/>

    <item
        android:id="@+id/history"
        android:title="@string/history"
        android:icon="@drawable/ic_history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/profile"
        android:title="@string/profile"
        android:icon="@drawable/ic_profile"
        app:showAsAction="ifRoom" />

</menu>