<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/start_section_margin" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/top_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="20dp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/start_section_margin" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto"
            android:text="Константинов Денис"
            android:textColor="@color/black_87"
            android:textSize="24sp"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toTopOf="@id/top_guideline"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/birthday_label"
            style="@style/TextLabelsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/start_section_margin"
            android:text="@string/birthday_label"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/name" />

        <TextView
            android:id="@+id/birthday"
            style="@style/TextStyle8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="01 февраля 1980"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/birthday_label"
            tools:ignore="HardcodedText" />

        <TextView
            android:id="@+id/sphere_label"
            style="@style/TextLabelsStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_between_list_items"
            android:fontFamily="sans-serif"
            android:text="@string/sphere_label"
            app:layout_constraintEnd_toStartOf="@+id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/birthday" />

        <TextView
            android:id="@+id/sphere"
            style="@style/TextStyle8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="Хирургия, травмотология"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/sphere_label"
            tools:ignore="HardcodedText" />

        <View
            android:id="@+id/divider0"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_between_list_items"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sphere" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/get_push_switch"
            style="@style/TextStyle8"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/start_section_margin"
            android:text="@string/get_push_nots"
            android:textAlignment="viewStart"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/divider0" />

        <View
            android:id="@+id/divider1"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/start_section_margin"
            android:background="@color/cool_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/get_push_switch" />

        <TextView
            android:id="@+id/friends_label"
            style="@style/TextLabelsStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_section"
            android:text="@string/your_friends"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/divider1" />

        <LinearLayout
            android:id="@+id/friends_list"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/start_section_margin"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/friends_label">

            <include
                layout="@layout/first_friend_scatch_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <include
                layout="@layout/second_friend_scatch_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_list_items" />

            <include
                layout="@layout/third_friend_scatch_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_between_list_items" />

        </LinearLayout>

        <View
            android:id="@+id/divider2"
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/new_section"
            android:background="@color/cool_grey"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/friends_list" />

        <Button
            android:id="@+id/exit"
            style="@style/ButtonTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/new_section"
            android:layout_marginBottom="@dimen/bottom_nav_menu_margin"
            android:text="@string/exit_string"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/right_guideline"
            app:layout_constraintStart_toStartOf="@id/left_guideline"
            app:layout_constraintTop_toBottomOf="@id/divider2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>
